src/test/ui/parser/fn-arg-doc-comment.stderr
error: attributes cannot be applied to a function parameter's type
  --> $DIR/fn-arg-doc-comment.rs:16:12
   |
LL | fn bar(id: #[allow(dead_code)] i32) {}
   |            ^^^^^^^^^^^^^^^^^^^ attributes are not allowed here

error: documentation comments cannot be applied to function parameters
  --> $DIR/fn-arg-doc-comment.rs:2:5
   |
LL |     /// Comment
   |     ^^^^^^^^^^^ doc comments are not allowed here

error: documentation comments cannot be applied to function parameters
  --> $DIR/fn-arg-doc-comment.rs:8:5
   |
LL |     /// Other
   |     ^^^^^^^^^ doc comments are not allowed here

error[E0658]: attributes on function parameters are unstable
  --> $DIR/fn-arg-doc-comment.rs:2:5
   |
LL |     /// Comment
   |     ^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/60406
   = help: add #![feature(param_attrs)] to the crate attributes to enable

error[E0658]: attributes on function parameters are unstable
  --> $DIR/fn-arg-doc-comment.rs:8:5
   |
LL |     /// Other
   |     ^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/60406
   = help: add #![feature(param_attrs)] to the crate attributes to enable

error[E0308]: mismatched types
  --> $DIR/fn-arg-doc-comment.rs:22:7
   |
LL |     f("", "");
   |       ^^ expected u8, found reference
   |
   = note: expected type `u8`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/fn-arg-doc-comment.rs:22:11
   |
LL |     f("", "");
   |           ^^ expected u8, found reference
   |
   = note: expected type `u8`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/fn-arg-doc-comment.rs:29:9
   |
LL |     bar("");
   |         ^^ expected i32, found reference
   |
   = note: expected type `i32`
              found type `&'static str`

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
